# LEXIS

./: .env  .gitignore  project_checklist.md  pyproject.toml  requirements.txt
rag_app/: __init__.py
rag_app/agents/: augmenting_retriver.py  crawler_agent.py  mcp_agent.py  web_agent.py
rag_app/app/: main.py
rag_app/app/static/: index.html
rag_app/data/: documents.json  url_index copy.json  url_index.json
rag_app/generator/: generator.py
rag_app/ingestion/: chunker.py  embedder.py  indexer.py
rag_app/retriever/: reranker.py  retriever.py  search.py
rag_app/scripts/: query_example.py
rag_app/tests/: test_chunker.py  test_embedder.py  test_generator.py  test_indexer.py  test_reranker.py  test_retriever.py  test_web_agent.py
rag_app/utils/: config.py  helpers.py
